<?xml version="1.0" encoding="utf-8"?>
<resources>
    <string name="app_name">JellyJelly</string>
    
    <!-- Bottom Navigation -->
    <string name="title_home">Home</string>
    <string name="title_add_friends">Add Friends</string>
    <string name="title_camera">Camera</string>
    <string name="title_library">Library</string>
    <string name="title_wallet">Wallet</string>

    <!-- Auth -->
    <string name="hint_email">Email</string>
    <string name="hint_password">Password</string>
    <string name="action_sign_in">Sign In</string>
    <string name="action_sign_up">Sign Up</string>
    <string name="error_invalid_email">Invalid email address</string>
    <string name="error_invalid_password">Password must be at least 6 characters</string>
    <string name="error_field_required">This field is required</string>
</resources> 